Fix z-index to above MapBox

--- a/src/styles/components/layout/_page-header.scss
+++ b/src/styles/components/layout/_page-header.scss
@@ -170,7 +170,7 @@ body.sticky-filters {
       top: $header-total-height;
       left: $navigation-sidebar-width;
       right: 0;
-      z-index: 1;
+      z-index: 11;
       background: #0d3a53 !important; // Need to use solid color instead of rgba
     }
   }
